--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
-    "bootstrap": "^4.1.1",
+    "@ng-bootstrap/ng-bootstrap": "^2.1.2",
+    "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
+    "tether": "^1.4.4",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
