--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^2.1.2",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.5.4",
+    "load-json-file": "^5.0.0",
     "rxjs": "^6.0.0",
     "tether": "^1.4.4",
     "zone.js": "^0.8.26"
