--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^2.1.2",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.5.4",
+    "jquery": "^1.9.1",
     "load-json-file": "^5.0.0",
     "rxjs": "^6.0.0",
     "tether": "^1.4.4",
@@ -40,11 +41,6 @@
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1"
