--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.5.4",
     "jquery": "^1.9.1",
     "load-json-file": "^5.0.0",
+    "ngx-logger": "^3.1.0",
     "rxjs": "^6.0.0",
     "tether": "^1.4.4",
     "zone.js": "^0.8.26"
