--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "load-json-file": "^5.0.0",
     "ngx-logger": "^3.1.0",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.0.0",
     "tether": "^1.4.4",
     "zone.js": "^0.8.26"
   },
